[workspace]
members = [
    "jito-bell",
    "stake-pool-parser"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.62"
borsh = "0.10.0"
borsh1 = { package = "borsh", version = "1.5.3" }
chrono = "0.4.26"
clap = { version = "4.3.0", features = ["derive", "env"] }
defillama-rs = "0.1.1"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.24"
jito-vault-client = "0.0.5"
jito-vault-sdk = "0.0.5"
log = "0.4.17"
maplit = "1.0.2"
num-derive = "0.4.2"
num-traits = "0.2.19"
openssl = { version = "0.10.72", features = ["vendored"] }
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
solana-metrics = "2.1.0"
solana-program = "2.1.0"
solana-rpc-client = "2.1.0"
solana-rpc-client-api = "2.1.0"
solana-sdk = "2.1.0"
spl-stake-pool = { version = "2.0.1", features = ["no-entrypoint"] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "4.0.0", features = [ "no-entrypoint", "serde-traits" ] }
thiserror = "2.0.12"
tokio = { version = "1.0.1", features = ["full"] }
tonic = { version = "0.13.1" }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
yellowstone-grpc-client = "2.0.0"
yellowstone-grpc-proto = { version = "2.0.0", default-features = false }
yellowstone-vixen-core = "0.3.0"
