[package]
name = "jito-bell"
version = "0.3.1"
authors = ["Jito Network Maintainers <support@jito.network>"]
repository = "https://github.com/jito-foundation/jito-bell"
edition = "2021"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "jito-bell"
path = "src/bin/main.rs"

[dependencies]
anchor-client = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }
borsh1 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
defillama-rs = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
jito-vault-client = { workspace = true }
jito-vault-sdk = { workspace = true }
log = { workspace = true }
maplit = { workspace = true }
openssl = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
solana-metrics = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-pubkey = { workspace = true }
spl-stake-pool = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
twitterust = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
