[package]
name = "twitterust"
version = "0.0.1"
edition = "2021"
description = "A Rust library for Twitter API v2 with OAuth 1.0a support"
authors = ["Jito Network Maintainers <support@jito.network>"]
repository = "https://github.com/jito-foundation/jito-bell"
readme = "README.md"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
hmac = { workspace = true }
percent-encoding = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
