[package]
name = "stake-pool"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
yellowstone-vixen = { workspace = true, features = ["prometheus"] }
yellowstone-vixen-parser = { workspace = true, features = ["token-program"] }
yellowstone-vixen-stake-pool-parser = { git = "https://github.com/aoikurokawa/yellowstone-vixen", branch = "ak/stake_pool" }
