[package]
name = "twitter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
hmac = "0.12"
sha1 = "0.10"
percent-encoding = "2.3"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
